# hub-nfts

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  credits.toml  docker-compose.yaml  rust-toolchain.toml
.github/workflows/: apollo_release.yml  cargo.yml  cargo_test.yml  post.yml  release.yml  schema_update.yml
api/: Cargo.toml  build.rs  proto.toml
api/src/: api.rs  collection.rs  db.rs  events.rs  handlers.rs  hub_uploads.rs  lib.rs  main.rs  metadata_json.rs  metrics.rs  nft_storage.rs  prepared_creator.rs
api/src/background_worker/: job.rs  job_queue.rs  mod.rs  worker.rs
api/src/background_worker/tasks/: metadata_json_upload_task.rs  mod.rs
api/src/blockchains/: blockchain.rs  mod.rs  polygon.rs  solana.rs
api/src/dataloaders/: collection.rs  collection_drop.rs  collection_mints.rs  collections.rs  creators.rs  drop.rs  drops.rs  holders.rs  metadata_json.rs  mint_creators.rs  mint_histories.rs  mod.rs  nft_transfers.rs  project_collection.rs  project_collections.rs  purchases.rs  switch_collection_histories.rs  update_histories.rs
api/src/entities/: collection_attributes.rs  collection_creators.rs  collection_mints.rs  collections.rs  customer_wallets.rs  drops.rs  job_trackings.rs  metadata_json_attributes.rs  metadata_json_files.rs  metadata_json_jobs.rs  metadata_json_uploads.rs  metadata_jsons.rs  mint_creators.rs  mint_histories.rs  mint_history.rs  mod.rs  nft_transfers.rs  prelude.rs  project_wallets.rs  purchases.rs  sea_orm_active_enums.rs  solana_collections.rs  switch_collection_histories.rs  transfer_charges.rs  update_histories.rs
api/src/graphql/: mod.rs  schema.rs
api/src/graphql/mutation/: mod.rs
api/src/graphql/query/: mod.rs
api/src/mutations/: collection.rs  drop.rs  mint.rs  mod.rs  transfer.rs
api/src/objects/: collection.rs  collection_creator.rs  collection_mint.rs  creator.rs  customer.rs  drop.rs  holder.rs  metadata_json.rs  metadata_json_input.rs  mod.rs  project.rs  wallet.rs
api/src/queries/: collection.rs  customer.rs  drop.rs  mint.rs  mod.rs  project.rs  wallet.rs
ci/: get-protoc.sh
core/: Cargo.toml
core/src/: lib.rs
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20230208_205152_create_solana_collections_table.rs  m20230209_052025_create_drops_table.rs  m20230209_052038_create_collection_attributes_table.rs  m20230209_052046_create_collection_mints_table.rs  m20230214_212301_create_collections_table.rs  m20230215_194724_create_drops_table.rs  m20230220_223223_create_collection_mints_table.rs  m20230223_145645_create_solana_collections_table.rs  m20230303_155836_add_metadata_json_tables.rs  m20230303_171740_create_collection_attributes_table.rs  m20230303_171749_create_metadata_json_files.rs  m20230303_171755_create_creators_table.rs  m20230303_235929_create_project_wallets_table.rs  m20230304_001527_add_ethereum_to_blockchain_type.rs  m20230304_112047_rename_collection_attributes_to_metadata_json_attributes.rs  m20230304_121614_move_collections_columns_to_metadata_jsons.rs  m20230305_154732_drop_created_by_on_solana_collections.rs  m20230306_100027_add_address_to_collections.rs  m20230306_131824_make_end_time_nullable_on_drops.rs  m20230306_132259_default_start_time_on_drops.rs  m20230306_151630_start_time_nullable_on_drops.rs  m20230306_154554_drop_unique_identifier_index_on_metadata_jsons.rs  m20230306_160517_add_total_mints_to_collections.rs  m20230307_174716_add_more_creation_status_events.rs  m20230307_205529_add_signature_column_to_collections_n_mints.rs  m20230327_114558_add_paused_at_column_to_drops.rs  m20230327_122414_add_paused_to_drop_status.rs  m20230327_194951_add_shutdown_at_column_to_drops_table.rs  m20230328_212141_add_signature_column_to_collections_n_mints.rs  m20230405_133333_rename_collection_id_to_id_and_rm_fk.rs  m20230406_164930_create_purchase_history_table.rs  m20230411_211313_remove_creation_status_column_from_collections_table.rs  m20230411_230029_create_nft_transfers_table.rs  m20230412_073127_create_column_seller_fee_basis_points_on_collections.rs  m20230412_144354_backfill_collections_seller_fee_basis_points_from_solana_collections.rs  m20230412_150236_drop_seller_fee_basis_points_on_solana_collections.rs  m20230414_110500_create_column_seller_fee_basis_points_on_collection_mints.rs  m20230414_110554_backfill_collection_miint_seller_fee_basis_points_from_solana_collections.rs  m20230415_202208_add_edition_field_to_collection_mints.rs  (+35 more)
solana-indexer/: Cargo.toml
solana-indexer/src/: main.rs
src/: main.rs
