[package]
name = "holaplex-hub-nfts"
version = "0.1.2"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub nfts service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]


[lib]

[dependencies]
sea-orm = { version = "0.12.2", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
async-graphql = { version = "5.0.10", features = [
  "chrono",
  "uuid",
  "log",
  "dataloader",
  "apollo_tracing",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
solana-program = "1.16.13"
poem = { version = "1.3.58", features = ["anyhow", "test"] }
async-graphql-poem = "5.0.10"
prost = "0.11.9"
prost-types = "0.11.9"
reqwest = { version = "0.11.20", features = ["json"] }
async-trait = "0.1.73"
strum = { version = "0.24.1", features = ["derive"] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.5.5"
git = "https://github.com/holaplex/hub-core"
features = ["kafka", "credits", "asset_proxy", "sea-orm", "metrics"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
