[package]
name = "holaplex-hub-nfts"
version = "0.1.1"
publish = false
authors = ["Holaplex <engineering@holaplex.com>"]
edition = "2021"
description = "Holaplex Hub nfts service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]


[lib]

[dependencies]
sea-orm = { version = "0.12.2", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
async-graphql = { version = "5.0.4", features = [
  "chrono",
  "uuid",
  "log",
  "dataloader",
  "apollo_tracing",
] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
solana-program = "1"
poem = { version = "1.3.50", features = ["anyhow", "test"] }
async-graphql-poem = "5.0.3"
prost = "0.11.9"
prost-types = "0.11.9"
reqwest = { version = "0.11.14", features = ["json"] }
async-trait = "0.1.68"
strum = { version = "0.24.1", features = ["derive"] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.5.5"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka", "credits", "asset_proxy", "sea-orm", "metrics"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
