[package]
name = "holaplex-rust-boilerplate-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.0.22", features = ["derive", "env"] }
anyhow = "1.0.66"
log = "0.4.17"