[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0.10.0" , features = [ "debug-print", "runtime-async-std-native-tls", "sqlx-postgres" ] }
async-graphql = { version = "5.0.3", features = ["chrono", "uuid", "log", "dataloader"] }
